# isandulelo

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUTURE.md  README.md  SECURITY.md  TERMS-OF-SERVICE-HOSTED.md  TERMS-OF-SERVICE.md  TRADEMARK.md  pyproject.toml
isandulelo/: manage.py
isandulelo/isandulelo/: asgi.py  urls.py  wsgi.py
isandulelo/isandulelo/settings/: __init__.py  base.py  development.py  settings.py
requirements/: base.txt  development.txt
scripts/: setup.py
