[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isandulelo"
version = "0.1.0"
description = "Open-source worldbuilding platform for storytellers and game developers"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Zakhele Gamede", email = "admin@indaloyethunzi.com"},
]
maintainers = [
    {name = "Indaloyethunzi", email = "admin@indaloyethunzi.com"},
]
keywords = ["worldbuilding", "storytelling", "game-development", "lore", "django", "react"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Office/Business",
]
requires-python = ">=3.9"
dependencies = [
    "Django>=4.2.0,<5.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.0.0",
    "django-filter>=23.0",
    "django-taggit>=4.0.0",
    "Pillow>=10.0.0",
    "python-decouple>=3.8",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.0.0",
    "ipython>=8.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Indaloyethunzi/isandulelo"
"Repository" = "https://github.com/Indaloyethunzi/isandulelo"
"Bug Tracker" = "https://github.com/Indaloyethunzi/isandulelo/issues"
"Documentation" = "https://github.com/Indaloyethunzi/isandulelo/wiki"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_django = "django"
known_first_party = "isandulelo,apps"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "isandulelo.settings.testing"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--tb=short --strict-markers --disable-warnings"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "isandulelo.settings.development"